# multi-agent-deep-research-system

./: .dockerignore  .env.example  .gitignore  Dockerfile.railway  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py
app/agents/: planner.py  quality.py  researcher.py  writer.py
app/graph/: state.py  workflow.py
app/services/: llm.py  sse.py  thread_store.py  tracing.py
app/tools/: exa_search.py  firecrawl_search.py  tavily_search.py  web_search_router.py  wiki_search.py
deploy/railway/: nginx.conf.template  start.sh
docs/: Architecture_Deliverable.md  Architecture_Doc.md
examples/: business_strategy_output.json  technical_factual_output.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: chat.ts
frontend/src/components/: LiveLogsPanel.tsx  ReportView.tsx  SourcesLoader.tsx  TraceTimeline.tsx
tests/integration/: test_api.py
tests/unit/: test_config.py  test_planner.py  test_researcher.py  test_writer.py
