[project]
name = "codexresearchagent"
version = "0.1.0"
description = "Multi-agent deep research backend with LangGraph and FastAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
